--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^3.10.1",
     "markdown-it": "^5.0.0",
     "markdown-it-container": "^2.0.0",
+    "rimraf": "^2.4.3",
     "through2": "^2.0.0"
   }
 }
